add dashboard and aggregate api
